--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -1,10 +1,14 @@
-<ons-toolbar>
-  <div class="center">Menu</div>
-</ons-toolbar>
 
 <div class="content">
   <ons-list>
+    <ons-list-item>
+      <div class="left">
+        picture
+      </div>
+      
+    </ons-list-item>
+
     <ons-list-item (click)="app.load('home')">Home</ons-list-item>
-    
+
   </ons-list>
 </div>
