--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -1,14 +1,12 @@
 
 <div class="content">
   <ons-list>
-    <ons-list-item>
-      <div class="left">
-        picture
-      </div>
-      
-    </ons-list-item>
+    <ons-list-item></ons-list-item>
 
     <ons-list-item (click)="app.load('home')">Home</ons-list-item>
 
-  </ons-list>
+    </ons-list>
 </div>
+<style>
+
+</style>
