--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+
+    <title>
+    </title>
+  </head>
+  <body>
+  </body>
+</html>
 <ons-toolbar>
   <div class="center">
     <ons-select>
@@ -31,24 +42,3 @@
 
   <ons-button class="box2">MyButton2</ons-button>
 </div>
-<style>
-  ons-button{
-  position: absolute;
-  width: 156px;
-  height: 175px;
-  background: #F4F4F4;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 14px;
-  }
-  ons-button.box1{
-  left: 19px;
-  top: 27px;
-  }
-
-  ons-button.box2{
-  left: 201px;
-  top: 27px;
-  color: red;
-  }
-
-</style>
