taskの内容とりあえず見やすくした

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -36,6 +36,7 @@
 <div class="background"></div>
 <div class="content">
   <ons-button class="box1">
+    <p>picture</p>
     <p>Title</p>
     <p>user_ID</p>
   </ons-button>
