--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -1,12 +1,13 @@
 
 <div class="content">
-  <ons-list>
-    <ons-list-item></ons-list-item>
+  <ons-button>
+    <div class="picture">
+      picture
+    </div>
 
-    <ons-list-item (click)="app.load('home')">Home</ons-list-item>
 
-    </ons-list>
+    <p class="name">name</p>
+    <p class="id">id</p>
+
+  </ons-button>
 </div>
-<style>
-
-</style>
