--- a/src/app/taskplus/taskplus.html
+++ b/src/app/taskplus/taskplus.html
@@ -5,5 +5,15 @@
     </ons-toolbar-button>
   </div>
 </ons-toolbar>
-<style>
-</style>
+
+<div class="box">
+  <div class="icon">
+  </div>
+  <p class="title">Title</p>
+  <input type="text" class="title">
+  <p class="user">AssignUser</p>
+  <input type="text" class="user">
+  <p class="comment">Comment</p>
+  <textarea class="comment" id=""></textarea>
+  </div>
+<ons-button class="make">Complete</ons-button>
