--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -1,6 +1,6 @@
 
 <div class="content">
-  <ons-button>
+  <ons-button (click)="app.load('mypage')">
     <div class="picture">
       picture
     </div>
