--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -12,13 +12,7 @@
 <ons-toolbar>
   <div class="center">
     <ons-select>
-      <option value="Monday">Monday</option>
-      <option value="Tuesday">Tuesday</option>
-      <option value="Wednesday">Wednesday</option>
-      <option value="Thursday">Thursday</option>
-      <option value="Friday">Friday</option>
-      <option value="Saturday">Saturday</option>
-      <option value="Sunday">Sunday</option>
+      <option *ngFor="let week of weeks">{{weeks.week}}</option>
     </ons-select>
   </div>
   <div class="left">
