--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -1,12 +1,16 @@
 ons-button{
-position: absolute;
-width: 156px;
+position: relative;
+display: inline-block;
+box-sizing: border-box;
+width: 50%;
 height: 175px;
 background: #F4F4F4;
 box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 border-radius: 14px;
-margin:16px;
+float:left;
+padding: 16px;
 }
+
 
 p{
   text-align: center;
